Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/TyparamLit.out
TyparamLit.java:11:16: compiler.err.type.var.cant.be.deref
1 error
